Attempted fix on iPhone line spacing per #1

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,11 @@
 body {
   margin: 0;
 
-  /* line-height: 1.7em; */
+  line-height: 1.7em;
+}
+
+h1 {
+  line-height: 2;
 }
 
 .hello {
